# Testes-Seed

./: pyproject.toml  robo_contratos.py
