[tool.poetry]
name = "testes-seed"
version = "0.1.0"
description = ""
authors = ["Fernando Santos <nandosantos.ia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
faker = "^30.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
